--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
@@ -65,6 +65,7 @@ header {
 }
 
 header nav ul li {
+  display: flex;
   list-style-type: none;
 }
 
@@ -81,6 +82,8 @@ header nav ul li a:hover {
 
 /* -------  Search Form ------- */
 form {
+  display: flex;
+  flex-direction: column;
   border: 2px solid #ff385c;
   padding: 10px;
 }
